src/components/overflow-menu/_overflow-menu.scss
//
// Copyright IBM Corp. 2016, 2018
//
// This source code is licensed under the Apache-2.0 license found in the
// LICENSE file in the root directory of this source tree.
//

//-----------------------------
// Overflow Menu
//-----------------------------

@import '../../globals/scss/vars';
@import '../../globals/scss/helper-mixins';
@import '../../globals/scss/css--reset';
@import '../../globals/scss/layer';
@import '../../globals/scss/layout';
@import '../../globals/scss/typography';
@import '../../globals/scss/import-once';

@mixin overflow-menu {
  .#{$prefix}--overflow-menu {
    @include reset;
    position: relative;
    width: rem(20px);
    height: rem(38px);
    cursor: pointer;

    &:focus {
      outline: 1px solid transparent;
      box-shadow: 0 0 0 1px $brand-01;
    }
  }

  .#{$prefix}--overflow-menu__icon {
    width: 100%;
    height: 100%;
    padding: 0.5rem;
    fill: $ui-05;

    &:hover,
    &:focus {
      fill: $hover-secondary;
    }
  }

  .#{$prefix}--overflow-menu-options {
    @include reset;
    @include layer('overlay');
    display: none;
    flex-direction: column;
    align-items: flex-start;
    position: absolute;
    z-index: z('floating');
    background-color: $inverse-01;
    border: 1px solid $ui-03;
    width: 11.25rem;
    list-style: none;
    margin-top: $spacing-2xs;
    padding: $spacing-2xs 0 $spacing-xs;
    left: -20px;
  }

  .#{$prefix}--overflow-menu-options--open {
    display: flex;
  }

  .#{$prefix}--overflow-menu-options {
    &:before {
      content: '';
      position: absolute;
      display: block;
      width: rem(8px);
      height: rem(8px);
      z-index: -1;
      transform: rotate(45deg);
      background-color: $inverse-01;
      border-top: 1px solid $ui-03;
      border-left: 1px solid $ui-03;
      top: -5px;
      left: 24px;
    }

    &[data-floating-menu-direction='top']:before {
      transform: rotate(225deg);
      top: auto;
      bottom: -5px;
    }
  }

  .#{$prefix}--overflow-menu-options__option {
    @include reset;
    display: flex;
    background-color: transparent;
    align-items: center;
    width: 100%;
    padding: 0;
  }

  .#{$prefix}--overflow-menu--divider {
    border-top: 1px solid $ui-03;
  }

  .#{$prefix}--overflow-menu-options__btn {
    @include reset;
    @include typescale('zeta');
    @include font-family;
    font-weight: 400;
    width: 100%;
    height: 100%;
    border: none;
    display: inline-block;
    background-color: transparent;
    text-align: left;
    padding: $spacing-xs $spacing-md;
    cursor: pointer;
    color: $text-01;
    max-width: 11.25rem;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    &:focus {
      outline: 1px solid transparent;
      text-decoration: underline;
      background-color: $hover-row;
      text-decoration: underline;
    }

    .#{$prefix}--overflow-menu-options__option--danger & {
      &:focus {
        outline: 1px solid transparent;
        text-decoration: underline;
      }
    }
  }

  .#{$prefix}--overflow-menu-options__option:hover {
    background-color: $hover-row;
  }

  .#{$prefix}--overflow-menu-options__option:hover .#{$prefix}--overflow-menu-options__btn {
    text-decoration: none;
    background-color: $hover-row;
    text-decoration: none;
  }

  .#{$prefix}--overflow-menu-options__option--danger {
    border-top: 1px solid $ui-03;
  }

  .#{$prefix}--overflow-menu-options__option--danger {
    .#{$prefix}--overflow-menu-options__btn {
      &:hover,
      &:focus {
        color: $inverse-01;
        background-color: $support-01;
      }
    }
  }

  .#{$prefix}--overflow-menu-options__option--disabled:hover {
    background-color: $ui-01;
  }

  .#{$prefix}--overflow-menu-options__option--disabled .#{$prefix}--overflow-menu-options__btn {
    color: $text-01;
    cursor: not-allowed;
    opacity: 0.5;
  }

  .#{$prefix}--overflow-menu-options__option--disabled:hover .#{$prefix}--overflow-menu-options__btn {
    color: $text-01;
    opacity: 0.5;
    background-color: $ui-01;

    &:active,
    &:focus {
      background-color: $ui-01;
      pointer-events: none;
    }
  }

  .#{$prefix}--overflow-menu--flip {
    left: -140px;

    &:before {
      left: 145px;
    }
  }
}

@mixin overflow-menu--x {
  .#{$prefix}--overflow-menu {
    @include reset;
    @include focus-outline('reset');
    position: relative;
    width: rem(32px);
    height: rem(32px);
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    transition: outline $transition--base, background-color $transition--base;

    &:focus {
      @include focus-outline('outline');
    }

    &:hover {
      background-color: $hover-ui;
    }
  }

  .#{$prefix}--overflow-menu.#{$prefix}--overflow-menu--open {
    background-color: $ui-01;
    transition: none;
    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.3);
  }

  .#{$prefix}--overflow-menu__icon {
    height: rem(16px);
    width: rem(16px);
    fill: $ui-05;
  }

  .#{$prefix}--overflow-menu-options {
    @include reset;
    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.3);
    display: none;
    flex-direction: column;
    align-items: flex-start;
    position: absolute;
    z-index: z('floating');
    background-color: $inverse-01;
    width: 11.25rem;
    list-style: none;
    top: 32px;
    left: 0;

    &::after {
      content: '';
      position: absolute;
      display: block;
      background-color: $ui-01;
      transition: background-color $transition--base;
    }
  }

  .#{$prefix}--overflow-menu-options[data-floating-menu-direction='bottom']::after {
    top: rem(-3px);
    left: 0;
    width: rem(32px);
    height: rem(3px);
  }

  .#{$prefix}--overflow-menu-options[data-floating-menu-direction='top']::after {
    bottom: rem(-6px);
    left: 0;
    width: rem(32px);
    height: rem(6px);
  }

  .#{$prefix}--overflow-menu-options[data-floating-menu-direction='left']::after {
    right: rem(-6px);
    top: 0;
    height: rem(32px);
    width: rem(6px);
  }

  .#{$prefix}--overflow-menu-options[data-floating-menu-direction='right']::after {
    top: 0;
    left: rem(-6px);
    height: rem(32px);
    width: rem(6px);
  }

  .#{$prefix}--overflow-menu--flip.#{$prefix}--overflow-menu-options[data-floating-menu-direction='top']::after,
  .#{$prefix}--overflow-menu--flip.#{$prefix}--overflow-menu-options[data-floating-menu-direction='bottom']::after {
    left: auto;
    right: 0;
  }

  .#{$prefix}--overflow-menu--flip.#{$prefix}--overflow-menu-options[data-floating-menu-direction='left']::after,
  .#{$prefix}--overflow-menu--flip.#{$prefix}--overflow-menu-options[data-floating-menu-direction='right']::after {
    top: auto;
    bottom: 0;
  }

  .#{$prefix}--overflow-menu-options--open {
    display: flex;
  }

  .#{$prefix}--overflow-menu-options__option {
    @include reset;
    display: flex;
    background-color: transparent;
    align-items: center;
    width: 100%;
    height: rem(32px);
    padding: 0;
    transition: background-color $transition--base;
  }

  .#{$prefix}--overflow-menu--divider {
    border-top: 1px solid $ui-03;
  }

  .#{$prefix}--overflow-menu-options__btn {
    @include reset;
    @include typescale('zeta');
    @include font-family;
    @include focus-outline('reset');
    font-weight: 400;
    width: 100%;
    height: 100%;
    border: none;
    display: inline-flex;
    align-items: center;
    background-color: transparent;
    text-align: left;
    padding: 0 $spacing-md;
    cursor: pointer;
    color: $text-01;
    max-width: 11.25rem;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    transition: outline $transition--base, background-color $transition--base, color $transition--base;

    &:focus {
      @include focus-outline('outline');
    }

    &::-moz-focus-inner {
      border: none;
    }
  }

  .#{$prefix}--overflow-menu-options__option:hover {
    background-color: $hover-ui;
  }

  .#{$prefix}--overflow-menu-options__option--danger {
    border-top: 1px solid $ui-03;
  }

  .#{$prefix}--overflow-menu-options__option--danger .#{$prefix}--overflow-menu-options__btn:hover,
  .#{$prefix}--overflow-menu-options__option--danger .#{$prefix}--overflow-menu-options__btn:focus {
    color: $inverse-01;
    background-color: $support-01;
  }

  .#{$prefix}--overflow-menu-options__option--disabled:hover {
    background-color: $ui-01;
    cursor: not-allowed;
  }

  .#{$prefix}--overflow-menu-options__option--disabled .#{$prefix}--overflow-menu-options__btn {
    color: $disabled;
    pointer-events: none;

    &:hover,
    &:active,
    &:focus {
      @include focus-outline('reset');
      background-color: $ui-01;
    }
  }

  .#{$prefix}--overflow-menu--flip {
    left: -140px;

    &:before {
      left: 145px;
    }
  }
}

@include exports('overflow-menu') {
  @if feature-flag-enabled('components-x') {
    @include overflow-menu--x;
  } @else {
    @include overflow-menu;
  }
}

