fix(overflow-menu): show ellipsis for all overflowing child elements

--- a/src/components/overflow-menu/_overflow-menu.scss
+++ b/src/components/overflow-menu/_overflow-menu.scss
@@ -231,7 +231,7 @@
     align-items: flex-start;
     position: absolute;
     z-index: z('floating');
-    background-color: $inverse-01;
+    background-color: $ui-01;
     width: 11.25rem;
     list-style: none;
     top: 32px;
@@ -305,6 +305,13 @@
     border-top: 1px solid $ui-03;
   }
 
+  a.#{$prefix}--overflow-menu-options__btn::before {
+    content: '';
+    height: 100%;
+    vertical-align: middle;
+    display: inline-block;
+  }
+
   .#{$prefix}--overflow-menu-options__btn {
     @include reset;
     @include typescale('zeta');
@@ -314,8 +321,7 @@
     width: 100%;
     height: 100%;
     border: none;
-    display: inline-flex;
-    align-items: center;
+    display: inline-block;
     background-color: transparent;
     text-align: left;
     padding: 0 $spacing-md;
